feat: complete crud for user entity
